# c242_cafa5

./: .gitignore  README.md  alphafold_feature_extractor.py  benchmark_graph_dataloaders.py  build_esm2_cache.py  cafa5_alphafold_pipeline.py  cafa5_pipeline_report.ipynb  cafa_graph_dataloaders.py  cafa_graph_dataset.py  cafa_multimodal_cache_builders.py  export_graph_dataloaders.py  export_graph_prediction_bundles.py  export_sequence_artifacts_from_graph_cache.py  pyproject.toml  requirements-graph-local.txt  requirements-graph-savio-module.txt  requirements-notebook-savio.txt  requirements-remote-multimodal.txt  train_minimal_graph_model.py
ESM/: ESM2_embedding.ipynb  ESM_error_analysis.ipynb  ESM_tuning.ipynb  esm_mlp_full_go_metrics.json  run_esm.sh
docs/: Final Project.docx  README.md  esm_kmer_pipeline.md
kmer/: MLP.py  MLP_kmer.ipynb  kmer_GOsplit_70.ipynb  kmer_baseline_summary.json  kmer_tuning.ipynb  kmer_tuning_summary.json
requirements/: base.txt  graph-local.txt  graph-savio-cu121.txt
scripts/: audit_graph_cache_preprocessing.py  build_enhanced_deck.py  compare_fmax_ablation_runs.py  export_test_terms_from_graph_cache.py  extract_graph_training_results.py  make_feature_extraction_figures.py  make_low_frequency_go_figures.py  make_node_edge_graph_comparison_figure.py  make_training_loss_figures.py  make_training_result_figures.py  make_training_setup_figure.py  make_tuned_results_figure.py  make_tuning_sweep_clean.py  materialize_normalized_graph_cache.py  savio_audit_graph_cache_preprocessing.sh  savio_build_esm2_cache.sh  savio_build_graph_cache.sh  (+19 more)
(+59 files in other folders)
